@@ -355,6 +355,85 @@ name|IOException
 block|{
 if|if
 condition|(
+name|query
+operator|instanceof
+name|MatchAllDocsQuery
+comment|// MatchNoDocsQuery currently rewrites to a BooleanQuery,
+comment|// but who knows, it might get its own Weight one day
+operator|||
+name|query
+operator|instanceof
+name|MatchNoDocsQuery
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+if|if
+condition|(
+name|query
+operator|instanceof
+name|BooleanQuery
+condition|)
+block|{
+name|BooleanQuery
+name|bq
+init|=
+operator|(
+name|BooleanQuery
+operator|)
+name|query
+decl_stmt|;
+if|if
+condition|(
+name|bq
+operator|.
+name|clauses
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+if|if
+condition|(
+name|query
+operator|instanceof
+name|DisjunctionMaxQuery
+condition|)
+block|{
+name|DisjunctionMaxQuery
+name|dmq
+init|=
+operator|(
+name|DisjunctionMaxQuery
+operator|)
+name|query
+decl_stmt|;
+if|if
+condition|(
+name|dmq
+operator|.
+name|getDisjuncts
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+if|if
+condition|(
 name|segmentPolicy
 operator|.
 name|shouldCache
