@@ -26,6 +26,34 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|MultiReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|SlowCompositeReaderWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|Term
 import|;
 end_import
@@ -212,6 +240,74 @@ operator|.
 name|frequency
 argument_list|(
 name|q3
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testNeverCacheMatchAll
+specifier|public
+name|void
+name|testNeverCacheMatchAll
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Query
+name|q
+init|=
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+decl_stmt|;
+name|UsageTrackingQueryCachingPolicy
+name|policy
+init|=
+operator|new
+name|UsageTrackingQueryCachingPolicy
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|1000
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|policy
+operator|.
+name|onUse
+argument_list|(
+name|q
+argument_list|)
+expr_stmt|;
+block|}
+name|assertFalse
+argument_list|(
+name|policy
+operator|.
+name|shouldCache
+argument_list|(
+name|q
+argument_list|,
+name|SlowCompositeReaderWrapper
+operator|.
+name|wrap
+argument_list|(
+operator|new
+name|MultiReader
+argument_list|()
+argument_list|)
+operator|.
+name|getContext
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
